--- a/test.html
+++ b/test.html
@@ -1484,6 +1484,8 @@ border-radius: 0px;
 </div>
 
 
+<div id="r基础" class="section level1">
+<h1>R基础</h1>
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
 <p>This is an R Markdown document. Markdown is a simple formatting
@@ -1501,6 +1503,7 @@ chunk like this:</p>
 <p>Note that the <code>echo = FALSE</code> parameter was added to the
 code chunk to prevent printing of the R code that generated the
 plot.</p>
+</div>
 </div>
 <div id="加载库" class="section level1">
 <h1>加载库</h1>
