--- a/index.html
+++ b/index.html
@@ -357,6 +357,9 @@ display: none;
 
 <div id="统计检验" class="section level2">
 <h2>统计检验</h2>
+<div id="r-base" class="section level3">
+<h3><a href="test.html">R base</a></h3>
+</div>
 <div id="independent-samples-t-test" class="section level3">
 <h3><a href="t_test2.html">independent samples t-test</a></h3>
 </div>
