--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="date" content="2024-11-18" />
 
-<title>index</title>
+<title>Statistics</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,7 +349,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">index</h1>
+<h1 class="title toc-ignore">Statistics</h1>
 <h4 class="date">2024-11-18</h4>
 
 </div>
@@ -360,6 +360,12 @@ display: none;
 <div id="r-base" class="section level3">
 <h3><a href="test.html">R base</a></h3>
 </div>
+<div id="correlation" class="section level3">
+<h3><a href="correlation.html">Correlation</a></h3>
+</div>
+<div id="regression" class="section level3">
+<h3><a href="regression.html">Regression</a></h3>
+</div>
 <div id="independent-samples-t-test" class="section level3">
 <h3><a href="t_test2.html">independent samples t-test</a></h3>
 </div>
@@ -367,7 +373,13 @@ display: none;
 <h3><a href="paired_t.html">paired samples t-test</a></h3>
 </div>
 <div id="one-way-anova" class="section level3">
-<h3><a href="anova.html">one way ANOVA</a></h3>
+<h3><a href="anova.html">one-way ANOVA</a></h3>
+</div>
+<div id="chi-square-test" class="section level3">
+<h3><a href="chisquare.html">Chi-square test</a></h3>
+</div>
+<div id="logistic-regression" class="section level3">
+<h3><a href="logistic.html">logistic regression</a></h3>
 </div>
 </div>
 
