--- a/index.html
+++ b/index.html
@@ -375,6 +375,9 @@ display: none;
 <div id="one-way-anova" class="section level3">
 <h3><a href="anova.html">one-way ANOVA</a></h3>
 </div>
+<div id="repeated-meausres-anova" class="section level3">
+<h3><a href="repeated.html">repeated-meausres ANOVA</a></h3>
+</div>
 <div id="chi-square-test" class="section level3">
 <h3><a href="chisquare.html">Chi-square test</a></h3>
 </div>
