--- a/index.html
+++ b/index.html
@@ -355,16 +355,26 @@ display: none;
 </div>
 
 
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  let links = document.querySelectorAll("a");
+  links.forEach(function(link) {
+    link.setAttribute("target", "_blank");
+  });
+});
+</script>
 <div id="统计检验" class="section level2">
 <h2>统计检验</h2>
 <div id="r-base" class="section level3">
 <h3><a href="test.html">R base</a></h3>
+<hr />
 </div>
 <div id="correlation" class="section level3">
-<h3><a href="correlation.html">Correlation</a></h3>
+<h3><a href="correlation.html">correlation</a></h3>
 </div>
 <div id="regression" class="section level3">
-<h3><a href="regression.html">Regression</a></h3>
+<h3><a href="regression.html">regression</a></h3>
+<hr />
 </div>
 <div id="independent-samples-t-test" class="section level3">
 <h3><a href="t_test2.html">independent samples t-test</a></h3>
@@ -377,12 +387,183 @@ display: none;
 </div>
 <div id="repeated-meausres-anova" class="section level3">
 <h3><a href="repeated.html">repeated-meausres ANOVA</a></h3>
+<hr />
 </div>
 <div id="chi-square-test" class="section level3">
-<h3><a href="chisquare.html">Chi-square test</a></h3>
+<h3><a href="chisquare.html">chi-square test</a></h3>
+<hr />
 </div>
 <div id="logistic-regression" class="section level3">
 <h3><a href="logistic.html">logistic regression</a></h3>
+<hr />
+</div>
+<div id="multiple-regression" class="section level3">
+<h3><a href="mr.html">multiple regression</a></h3>
+<hr />
+</div>
+<div id="principal-component-analysis" class="section level3">
+<h3><a href="pca.html">principal component analysis</a></h3>
+<hr />
+</div>
+<div id="factor-analysis" class="section level3">
+<h3><a href="fator.html">factor analysis</a></h3>
+<hr />
+</div>
+<div id="mediation-analysis" class="section level3">
+<h3><a href="mediation.html">mediation analysis</a></h3>
+<hr />
+</div>
+<div id="moderation-analysis" class="section level3">
+<h3><a href="moderation.html">moderation analysis</a></h3>
+<hr />
+</div>
+<div id="interaction-analysis" class="section level3">
+<h3><a href="interaction.html">interaction analysis</a></h3>
+<hr />
+</div>
+<div id="cluster-analysis" class="section level3">
+<h3><a href="cluster.html">cluster analysis</a></h3>
+<hr />
+</div>
+<div id="discriminant-analysis" class="section level3">
+<h3><a href="da.html">discriminant analysis</a></h3>
+<hr />
+</div>
+<div id="canonical-correlation-analysis" class="section level3">
+<h3><a href="cca.html">canonical correlation analysis</a></h3>
+<hr />
+</div>
+<div id="path-analysis" class="section level3">
+<h3><a href="path.html">path analysis</a></h3>
+<hr />
+</div>
+<div id="confirmatory-factor-analysis" class="section level3">
+<h3><a href="cfa.html">confirmatory factor analysis</a></h3>
+<hr />
+</div>
+<div id="structural-equation-modeling" class="section level3">
+<h3><a href="sem.html">structural equation modeling</a></h3>
+<hr />
+</div>
+<div id="hierarchical-linear-model" class="section level3">
+<h3><a href="hlm.html">hierarchical linear model</a></h3>
+<hr />
+</div>
+<div id="generalized-linear-model" class="section level3">
+<h3><a href="glm.html">generalized linear model</a></h3>
+<hr />
+</div>
+<div id="mixed-model" class="section level3">
+<h3><a href="mixed.html">mixed model</a></h3>
+<hr />
+</div>
+<div id="survival-analysis" class="section level3">
+<h3><a href="survival.html">survival analysis</a></h3>
+<hr />
+</div>
+<div id="time-series-analysis" class="section level3">
+<h3><a href="ts.html">time series analysis</a></h3>
+<hr />
+</div>
+<div id="meta-analysis" class="section level3">
+<h3><a href="meta.html">meta-analysis</a></h3>
+<hr />
+</div>
+<div id="item-response-theory" class="section level3">
+<h3><a href="irt.html">item response theory</a></h3>
+<hr />
+</div>
+<div id="roc-curve" class="section level3">
+<h3><a href="roc.html">ROC curve</a></h3>
+<hr />
+</div>
+<div id="power-analysis" class="section level3">
+<h3><a href="power.html">power analysis</a></h3>
+<hr />
+</div>
+<div id="effect-size" class="section level3">
+<h3><a href="es.html">effect size</a></h3>
+<hr />
+</div>
+<div id="bayesian-statistics" class="section level3">
+<h3><a href="bayes.html">Bayesian statistics</a></h3>
+<hr />
+</div>
+<div id="bootstrap" class="section level3">
+<h3><a href="bootstrap.html">bootstrap</a></h3>
+<hr />
+</div>
+<div id="permutation-test" class="section level3">
+<h3><a href="permutation.html">permutation test</a></h3>
+<hr />
+</div>
+<div id="monte-carlo-simulation" class="section level3">
+<h3><a href="mc.html">Monte Carlo simulation</a></h3>
+<hr />
+</div>
+<div id="nonparametric-test" class="section level3">
+<h3><a href="nonpara.html">nonparametric test</a></h3>
+<hr />
+</div>
+<div id="robust-statistics" class="section level3">
+<h3><a href="robust.html">robust statistics</a></h3>
+<hr />
+</div>
+<div id="missing-data" class="section level3">
+<h3><a href="missing.html">missing data</a></h3>
+<hr />
+</div>
+<div id="imputation" class="section level3">
+<h3><a href="imputation.html">imputation</a></h3>
+<hr />
+</div>
+<div id="data-transformation" class="section level3">
+<h3><a href="transformation.html">data transformation</a></h3>
+<hr />
+</div>
+<div id="data-visualization" class="section level3">
+<h3><a href="visualization.html">data visualization</a></h3>
+<hr />
+</div>
+<div id="data-mining" class="section level3">
+<h3><a href="mining.html">data mining</a></h3>
+<hr />
+</div>
+<div id="machine-learning" class="section level3">
+<h3><a href="ml.html">machine learning</a></h3>
+<hr />
+</div>
+<div id="deep-learning" class="section level3">
+<h3><a href="dl.html">deep learning</a></h3>
+<hr />
+</div>
+<div id="neural-network" class="section level3">
+<h3><a href="nn.html">neural network</a></h3>
+<hr />
+</div>
+<div id="time-series-forecasting" class="section level3">
+<h3><a href="forecasting.html">time series forecasting</a></h3>
+<hr />
+</div>
+<div id="text-mining" class="section level3">
+<h3><a href="text.html">text mining</a></h3>
+<hr />
+</div>
+<div id="web-scraping" class="section level3">
+<h3><a href="web.html">web scraping</a></h3>
+<hr />
+</div>
+<div id="api" class="section level3">
+<h3><a href="api.html">API</a></h3>
+<hr />
+</div>
+<div id="r-package" class="section level3">
+<h3><a href="package.html">R package</a></h3>
+<hr />
+</div>
+<div id="r-markdown" class="section level3">
+<h3><a href="rmarkdown.html">R Markdown</a></h3>
+<hr />
 </div>
 </div>
 
