--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <hr />
 </div>
 <div id="time-series-analysis" class="section level3">
-<h3><a href="ts.html">time series analysis</a></h3>
+<h3><a href="timeseries.html">time series analysis</a></h3>
 <hr />
 </div>
 <div id="meta-analysis" class="section level3">
@@ -483,6 +483,14 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="effect-size" class="section level3">
 <h3><a href="es.html">effect size</a></h3>
+<hr />
+</div>
+<div id="reliability-analysis" class="section level3">
+<h3><a href="reliability.html">reliability analysis</a></h3>
+<hr />
+</div>
+<div id="validity-analysis" class="section level3">
+<h3><a href="validity.html">validity analysis</a></h3>
 <hr />
 </div>
 <div id="bayesian-statistics" class="section level3">
