--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <hr />
 </div>
 <div id="path-analysis" class="section level3">
-<h3><a href="path.html">path analysis</a></h3>
+<h3><a href="pa.html">path analysis</a></h3>
 <hr />
 </div>
 <div id="confirmatory-factor-analysis" class="section level3">
