--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <hr />
 </div>
 <div id="factor-analysis" class="section level3">
-<h3><a href="fator.html">factor analysis</a></h3>
+<h3><a href="factor.html">factor analysis</a></h3>
 <hr />
 </div>
 <div id="mediation-analysis" class="section level3">
