--- a/repeated.html
+++ b/repeated.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2024-11-19" />
 
-<title>regression analysis</title>
+<title>repeated measures ANOVA</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1562,7 +1562,7 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">regression analysis</h1>
+<h1 class="title toc-ignore">repeated measures ANOVA</h1>
 <h4 class="author">Your Name</h4>
 <h4 class="date">2024-11-19</h4>
 
