--- a/correlation.html
+++ b/correlation.html
@@ -9,11 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name" />
+<meta name="author" content="ChatGPT 4o" />
 
-<meta name="date" content="2024-11-18" />
+<meta name="date" content="2024-11-20" />
 
-<title>correlation analysis</title>
+<title>Correlation Analysis</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1562,9 +1562,9 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">correlation analysis</h1>
-<h4 class="author">Your Name</h4>
-<h4 class="date">2024-11-18</h4>
+<h1 class="title toc-ignore">Correlation Analysis</h1>
+<h4 class="author">ChatGPT 4o</h4>
+<h4 class="date">2024-11-20</h4>
 
 </div>
 
