--- a/meta.html
+++ b/meta.html
@@ -9,11 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name" />
+<meta name="author" content="ChatGPT 4o" />
 
-<meta name="date" content="2024-11-19" />
+<meta name="date" content="2024-11-20" />
 
-<title>meta analysis</title>
+<title>Meta Analysis</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1562,9 +1562,9 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">meta analysis</h1>
-<h4 class="author">Your Name</h4>
-<h4 class="date">2024-11-19</h4>
+<h1 class="title toc-ignore">Meta Analysis</h1>
+<h4 class="author">ChatGPT 4o</h4>
+<h4 class="date">2024-11-20</h4>
 
 </div>
 
