--- a/t_test2.html
+++ b/t_test2.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name" />
+<meta name="author" content="ChatGPT 4o" />
 
-<meta name="date" content="2024-11-18" />
+<meta name="date" content="2024-11-20" />
 
 <title>Independent Samples t-Test</title>
 
@@ -1563,8 +1563,8 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Independent Samples t-Test</h1>
-<h4 class="author">Your Name</h4>
-<h4 class="date">2024-11-18</h4>
+<h4 class="author">ChatGPT 4o</h4>
+<h4 class="date">2024-11-20</h4>
 
 </div>
 
