--- a/index.html
+++ b/index.html
@@ -492,7 +492,25 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="nonparametric-test" class="section level3">
 <h3><a href="nonpara.html">nonparametric test</a></h3>
 <hr />
+</div>
+<div id="prosensity-score-matching" class="section level3">
+<h3><a href="psm.html">prosensity score matching</a></h3>
 <hr />
+</div>
+<div id="differences-in-differences" class="section level3">
+<h3><a href="did.html">differences-in-differences</a></h3>
+<hr />
+</div>
+<div id="instrumental-variable" class="section level3">
+<h3><a href="iv.html">instrumental variable</a></h3>
+<hr />
+</div>
+<div id="regression-discontinuity-design" class="section level3">
+<h3><a href="rdd.html">regression discontinuity design</a></h3>
+<hr />
+</div>
+<div id="causual-inference" class="section level3">
+<h3><a href="causal.html">causual inference</a></h3>
 <hr />
 <hr />
 </div>
