--- a/causal.html
+++ b/causal.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2024-11-20" />
 
-<title>causal inference</title>
+<title>Causal Inference</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1562,7 +1562,7 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">causal inference</h1>
+<h1 class="title toc-ignore">Causal Inference</h1>
 <h4 class="author">ChatGPT 4o</h4>
 <h4 class="date">2024-11-20</h4>
 
