--- a/index.html
+++ b/index.html
@@ -367,6 +367,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <h2>统计检验</h2>
 <div id="r-base" class="section level3">
 <h3><a href="test.html">R base</a></h3>
+</div>
+<div id="descriptive-statistics" class="section level3">
+<h3><a href="describe.html">descriptive statistics</a></h3>
 <hr />
 </div>
 <div id="correlation" class="section level3">
