--- a/index.html
+++ b/index.html
@@ -390,6 +390,9 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="repeated-meausres-anova" class="section level3">
 <h3><a href="repeated.html">repeated-meausres ANOVA</a></h3>
+</div>
+<div id="mixed-design-anova" class="section level3">
+<h3><a href="mixed_design.html">mixed-design ANOVA</a></h3>
 <hr />
 </div>
 <div id="chi-square-test" class="section level3">
