--- a/download.html
+++ b/download.html
@@ -373,16 +373,25 @@ document.addEventListener("DOMContentLoaded", function() {
 <h3><a href="repeated_measure2.sav">双因素重复测量</a></h3>
 </div>
 <div id="混合设计" class="section level3">
-<h3><a href="mixed_design.sav">混合设计</a></h3>
-</div>
-<div id="混合设计实例" class="section level3">
-<h3><a href="mixed.sav">混合设计实例</a></h3>
+<h3><a href="mixed.sav">混合设计</a></h3>
 </div>
 <div id="两组前后测" class="section level3">
 <h3><a href="before_after.sav">两组前后测</a></h3>
 </div>
 <div id="多元回归" class="section level3">
 <h3><a href="data.sav">多元回归</a></h3>
+</div>
+<div id="因子分析" class="section level3">
+<h3><a href="efa.sav">因子分析</a></h3>
+</div>
+<div id="中介分析" class="section level3">
+<h3><a href="mediate.sav">中介分析</a></h3>
+</div>
+<div id="自变量为分类变量的中介" class="section level3">
+<h3><a href="example.sav">自变量为分类变量的中介</a></h3>
+</div>
+<div id="调节分析" class="section level3">
+<h3><a href="moderate.sav">调节分析</a></h3>
 </div>
 
 
