--- a/download.html
+++ b/download.html
@@ -382,7 +382,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <h3><a href="data.sav">多元回归</a></h3>
 </div>
 <div id="因子分析" class="section level3">
-<h3><a href="efa.sav">因子分析</a></h3>
+<h3><a href="EFA.sav">因子分析</a></h3>
 </div>
 <div id="中介分析" class="section level3">
 <h3><a href="mediate.sav">中介分析</a></h3>
