--- a/url.html
+++ b/url.html
@@ -374,6 +374,14 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="min2k" class="section level3">
 <h3><a href="www.min2k.com">Min2k</a></h3>
+<hr />
+</div>
+<div id="zlibrary" class="section level3">
+<h3><a href="zh.zlib-book.top">zlibrary</a></h3>
+</div>
+<div id="excalidraw" class="section level3">
+<h3><a href="excalidraw.com">Excalidraw</a></h3>
+<hr />
 </div>
 <div id="百盘" class="section level3">
 <h3><a href="pan.baidu.com">百盘</a></h3>
@@ -383,6 +391,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="扬盘" class="section level3">
 <h3><a href="pan.yzu.edu.cn">扬盘</a></h3>
+<hr />
 </div>
 <div id="幕布" class="section level3">
 <h3><a href="mubu.com">幕布</a></h3>
@@ -392,6 +401,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="vpn" class="section level3">
 <h3><a href="www.roosf.com">vpn</a></h3>
+<hr />
 </div>
 <div id="arc" class="section level3">
 <h3>[Arc]</h3>
@@ -413,12 +423,13 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="visual-studio-code" class="section level3">
 <h3>[visual studio code]</h3>
+<hr />
 </div>
 <div id="spss" class="section level3">
-<h3>[SPSS]</h3>
+<h3><a href="download.html">SPSS</a></h3>
 </div>
 <div id="r" class="section level3">
-<h3>[R]</h3>
+<h3><a href="index.html">R</a></h3>
 </div>
 <div id="mplus" class="section level3">
 <h3>[Mplus]</h3>
