--- a/url.html
+++ b/url.html
@@ -364,43 +364,43 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 </script>
 <div id="chatgpt" class="section level3">
-<h3><a href="chatgpt.openai.com">ChatGPT</a></h3>
+<h3><a href="https://chatgpt.openai.com">ChatGPT</a></h3>
 </div>
 <div id="助手" class="section level3">
-<h3><a href="bot.360.com">360助手</a></h3>
+<h3><a href="https://bot.360.com">360助手</a></h3>
 </div>
 <div id="noi" class="section level3">
-<h3><a href="noi.nofwl.com">Noi</a></h3>
+<h3><a href="https://noi.nofwl.com">Noi</a></h3>
 </div>
 <div id="min2k" class="section level3">
-<h3><a href="www.min2k.com">Min2k</a></h3>
+<h3><a href="https://www.min2k.com">Min2k</a></h3>
 <hr />
 </div>
 <div id="zlibrary" class="section level3">
-<h3><a href="zh.zlib-book.top">zlibrary</a></h3>
+<h3><a href="https://zh.zlib-book.top">zlibrary</a></h3>
 </div>
 <div id="excalidraw" class="section level3">
-<h3><a href="excalidraw.com">Excalidraw</a></h3>
+<h3><a href="https://excalidraw.com">Excalidraw</a></h3>
 <hr />
 </div>
 <div id="百盘" class="section level3">
-<h3><a href="pan.baidu.com">百盘</a></h3>
+<h3><a href="https://pan.baidu.com">百盘</a></h3>
 </div>
-<div id="百盘-1" class="section level3">
-<h3><a href="pan.quark.cn">百盘</a></h3>
+<div id="夸盘" class="section level3">
+<h3><a href="https://pan.quark.cn">夸盘</a></h3>
 </div>
 <div id="扬盘" class="section level3">
-<h3><a href="pan.yzu.edu.cn">扬盘</a></h3>
+<h3><a href="https://pan.yzu.edu.cn">扬盘</a></h3>
 <hr />
 </div>
 <div id="幕布" class="section level3">
-<h3><a href="mubu.com">幕布</a></h3>
+<h3><a href="https://mubu.com">幕布</a></h3>
 </div>
 <div id="向日葵" class="section level3">
-<h3><a href="sunlogin.oray.com">向日葵</a></h3>
+<h3><a href="https://sunlogin.oray.com">向日葵</a></h3>
 </div>
 <div id="vpn" class="section level3">
-<h3><a href="www.roosf.com">vpn</a></h3>
+<h3><a href="https://www.roosf.com">vpn</a></h3>
 <hr />
 </div>
 <div id="arc" class="section level3">
