--- a/url.html
+++ b/url.html
@@ -1481,11 +1481,11 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
-<p><a href="https://www.sohu.com">Sohu</a> <a href="https://www.yznews.com.cn">Yz</a> <a href="https://weibo.com/mygroups?gid=3667142241545265">Weibo</a> <a href="https://www.bilibili.com">Bilibili</a> <a href="https://zz123.com/suibian.htm">Music</a> <a href="https://www.ikanbot.com">Video</a></p>
+<p><a href="https://www.sohu.com">Sohu</a> <a href="https://www.yznews.com.cn">Yz</a> <a href="https://weibo.com/mygroups?gid=3667142241545265">Weibo</a> <a href="https://www.bilibili.com">Bilibili</a> <a href="https://zz123.com/suibian.htm">Music</a> <a href="https://www.ikanbot.com">Video</a> <a href="https://mail.163.com">mail</a></p>
 </div>
 <div id="tools" class="section level1">
 <h1>Tools</h1>
-<p><a href="https://zh.zlib-book.top">zlibrary</a> <a href="https://zh.z-lib.gs/">zlibrary2</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://draw.io">Flowchart</a> <a href="https://mubu.com">幕布</a>
+<p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://draw.io">Flowchart</a> <a href="https://mubu.com">幕布</a>
 <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://www.photopea.com/">pic</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
 </div>
 <div id="teach" class="section level1">
