--- a/url.html
+++ b/url.html
@@ -1478,6 +1478,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="ai" class="section level1">
 <h1>AI</h1>
 <p><a href="https://chatgpt.openai.com">ChatGPT</a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
+<p><a href="ai.html">AI应用</a></p>
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
