--- a/ai.html
+++ b/ai.html
@@ -1863,6 +1863,121 @@ professional and respectful tone throughout.</li>
 Scientific Research Paper writing?</p>
 </div>
 </div>
+<div id="chatgpt-4o-with-canvas" class="section level1">
+<h1>ChatGPT 4o with canvas</h1>
+<div id="collaborative-writing" class="section level2">
+<h2>collaborative writing</h2>
+<p>example 1–search and write a research essay and visualize</p>
+<ul>
+<li>search the web to list out Van Gogh’s brushing techniques in bullet
+points</li>
+<li>write a research essay expanding on each tool
+<ul>
+<li>select text and ask chatgpt: search the web to verify this
+claim</li>
+<li>use the sliders(reading level  adjust the length)</li>
+<li>select text and ask chatgpt: visualize this technique in dalle
+image</li>
+</ul></li>
+<li>reformat the content in markdown table</li>
+<li>make it such that it is a lesson plan</li>
+</ul>
+<p>example 2–search maps and write an email</p>
+<ul>
+<li>search for the best restaurants in SF Mission</li>
+<li>write an email to my friend inviting them to the San Ho Won
+restaurant using canvas</li>
+<li>edit content directly</li>
+<li>select text and ask chatgpt: make this tone to be a bit funnier</li>
+<li>make the second paragraph to be a bit friendlier</li>
+<li>add final polish(reformat and enhance your writing)</li>
+<li>tolls(copy / show changes )</li>
+</ul>
+<p>example 3 add comments as reviewer</p>
+<ul>
+<li>open a new canvas</li>
+<li>paste the contens from previous chat as a normal document</li>
+<li>add final polish</li>
+<li>suggest how to improve the writing style of this trip</li>
+<li>show changes</li>
+<li>change the 2nd day to be in Kyoto</li>
+<li>select the text and ask : search for the images oof this place</li>
+<li>transform to be a blogpost</li>
+<li>add emojs</li>
+</ul>
+<p>example 4 have a plot that i want to visualize in canvas</p>
+<ul>
+<li>take a screenshot</li>
+<li>reason through the plot and write a research report in canvas</li>
+<li>select text(calibration) and ask: what are other models of
+calibration in LLMs</li>
+<li>search for some literature about this and add a literature review
+section in canvas</li>
+<li>just graph the left o1-preview results in python canvas</li>
+</ul>
+</div>
+<div id="collaborative-coding" class="section level2">
+<h2>collaborative coding</h2>
+<p>example 1–simple sine wave animation</p>
+<ul>
+<li>create a simple sine wave matplotlib animation</li>
+<li>make the plot dashed and red, make the lines thicker</li>
+</ul>
+<p>example 2–a matrix style flower</p>
+<ul>
+<li>create a matrix style animation of life visualization using numpy
+python</li>
+<li>port to a language: javascript<br />
+</li>
+<li>create a self-contained html file</li>
+</ul>
+<p>example 3–create an interactive simulation of the concept</p>
+<ul>
+<li>explain the concept of the Kuhn’s theory of scientific revolutions
+in canvas</li>
+<li>create an interactive simulation of the concept behind this theory
+in an engaging way.</li>
+<li>Use d3.js in a self-contained html file, make it aesthetic and
+interactive.</li>
+<li>add a quiz to the visulization</li>
+</ul>
+</div>
+<div id="create-game" class="section level2">
+<h2>create game</h2>
+<p>example 1–a spaceship battle game</p>
+<ul>
+<li>create a simple spaceship battle game with competitive scoring
+system, with everything in one html file.</li>
+<li>make it as interactive as possible. The feel should be
+retro-futuristic</li>
+<li>select background code and ask chatgpt: replace this with black
+background</li>
+<li>I want to implement the logic where it would fail when the my square
+would hit the red square, make it like a game with failures and
+leveling</li>
+<li>when the game is over display the results of the score and have a
+key to restart</li>
+<li>create a feel of space with stars and moving orbits</li>
+<li>make the pink squares to gradually speeding up to make the game more
+fun and harder</li>
+<li>make it faster</li>
+</ul>
+</div>
+<div id="create-sql-database-from-architecture-image" class="section level2">
+<h2>create SQL database from architecture image</h2>
+<ul>
+<li>take a screenshot of this diagram</li>
+<li>create the SQL database based on the image and populate with the
+data, use canvas</li>
+<li>website: SQL Fiddle</li>
+<li>now to fix the same issue with other tables</li>
+<li>add more teachers and subjects in the database and more
+students</li>
+<li>create a query for students who took math</li>
+<li>show the teacher for students as well</li>
+</ul>
+</div>
+</div>
 <div id="ai-links" class="section level1">
 <h1>AI Links</h1>
 <p><a href="https://chatgpt.openai.com">ChatGPT</a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
