--- a/ai.html
+++ b/ai.html
@@ -1759,7 +1759,7 @@ content generation.</p>
 <li>将文件的核心内容用思维导图的形式来呈现，并提供下载链接。</li>
 <li>转换为markdown格式，方便我制作思维导图。对于免费、无需注册、在线制作思维导图，你有何推荐？</li>
 </ul>
-<p><a href="https://www.min2k.com/tools/markmap" class="uri">https://www.min2k.com/tools/markmap</a> <a href="https://markmap.js.org" class="uri">https://markmap.js.org</a></p>
+<p><a href="https://www.min2k.com/tools/markmap" class="uri">https://www.min2k.com/tools/markmap</a> <a href="https://markmap.js.org" class="uri">https://markmap.js.org</a> <a href="https://markdown-map.com/" class="uri">https://markdown-map.com/</a></p>
 </div>
 <div id="解读论文" class="section level1">
 <h1>解读论文</h1>
