--- a/ai.html
+++ b/ai.html
@@ -1896,7 +1896,7 @@ restaurant using canvas</li>
 <p>example 3 add comments as reviewer</p>
 <ul>
 <li>open a new canvas</li>
-<li>paste the contens from previous chat as a normal document</li>
+<li>paste the contents from previous chat as a normal document</li>
 <li>add final polish</li>
 <li>suggest how to improve the writing style of this trip</li>
 <li>show changes</li>
@@ -1975,6 +1975,151 @@ data, use canvas</li>
 students</li>
 <li>create a query for students who took math</li>
 <li>show the teacher for students as well</li>
+</ul>
+</div>
+</div>
+<div id="days-of-openai" class="section level1">
+<h1>12 days of OpenAI</h1>
+<div id="day-1--o1-and-chatgpt-pro" class="section level2">
+<h2>Day 1- O1 and ChatGPT Pro</h2>
+<ul>
+<li>O1:先智能思考再回答，支持多模态，图片和文本推理、file uploading、web
+browsing
+<ul>
+<li>list the Roman emperors of the second century, including their dates
+and accomplishments</li>
+<li>this shows a highly simplified schematic of datacenter in space. For
+any simplifying assumptioons provide justification</li>
+<li>Your job is to estimate the lower bound of the required radiator
+surface area for this datacenter that hosts FPUs.</li>
+<li>In doing so, also answer the following questions</li>
+<li><ol style="list-style-type: decimal">
+<li>How do you handle the Sun and Deep space?</li>
+</ol></li>
+<li><ol start="2" style="list-style-type: decimal">
+<li>How does First law of Thermodynamics come into play?</li>
+</ol></li>
+</ul></li>
+<li>ChatGPT
+Pro：更多算力，更高可靠性，更复杂难度的数学、科学、编程、写作任务
+<ul>
+<li>which protein strictly fits the following criteria?</li>
+<li><ol style="list-style-type: decimal">
+<li>The precursor polypetide has a lenght of 210 to 230 amino acid
+residues</li>
+</ol></li>
+<li><ol start="2" style="list-style-type: decimal">
+<li>The gene encoding this protein spans 32 kiobases</li>
+</ol></li>
+<li><ol start="3" style="list-style-type: decimal">
+<li>The gene is located on the X chromosome, specifically at band
+Xp22</li>
+</ol></li>
+<li><ol start="4" style="list-style-type: decimal">
+<li>The signal peptide comprises 23 amino acid residues</li>
+</ol></li>
+<li><ol start="5" style="list-style-type: decimal">
+<li>The protein facilitaes cell-cell adhesion.</li>
+</ol></li>
+<li><ol start="6" style="list-style-type: decimal">
+<li>The protein plays a critical role in maintaining the health of a
+specific part of the nervous system</li>
+</ol></li>
+</ul></li>
+</ul>
+</div>
+<div id="day-2--reinforcement-fine-tuning-and-model-customization" class="section level2">
+<h2>Day 2- reinforcement fine-tuning and model customization</h2>
+<ul>
+<li><p>微调数据集 training</p>
+<ul>
+<li>training data example
+<ul>
+<li>case report:
+<ul>
+<li>51-year-old woman.Disearse onset was not specified</li>
+<li>Symptomes: Hypertelorism, Blepharophimosis, Micrognathia,
+Velopharygeal insufficienty, Hypoparathyrodism, Global developmental
+delay, and Sensorineural hearing impairment</li>
+<li>Absent Symptoms: Cleft palate, Tetralogy of Fallot, Pulmonary valve
+atresia, Atrial septal defect, Aortopulmonary collateral arteries</li>
+</ul></li>
+<li>instructions:
+<ul>
+<li>Please list all genes that may cause these symptoms in ranked order,
+from most to least likely along with an explanation for why you think
+those specific genes may be responsible.</li>
+</ul></li>
+<li>Correct Answer:
+<ul>
+<li>FOXE3</li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li><p>model output</p>
+<ul>
+<li>[KDM5A,FOXE3,BBS5,……]</li>
+</ul></li>
+<li><p>测试数据集 validation</p></li>
+<li><p>评分grading</p></li>
+</ul>
+</div>
+<div id="day-3--sora" class="section level2">
+<h2>Day 3- Sora</h2>
+<ul>
+<li><a href="https://sora.com">sora.com</a></li>
+<li>1080P,20s</li>
+<li>宽屏、竖屏、方屏</li>
+<li>文本转视频、图像转视频、视频转视频</li>
+<li>a wide shot of wooly mammoths walking through a desert
+landscape</li>
+<li>replace woooly mammoths with robots</li>
+<li>storyboard
+<ul>
+<li>a beautiful white crane with yellow tail stands in a creek.</li>
+<li>the crane dips its head into the water and pulls out a fish</li>
+</ul></li>
+<li>upload a picture, sora will create a new card:a continuation
+caption</li>
+</ul>
+</div>
+<div id="day-4--canvas" class="section level2">
+<h2>Day 4- Canvas</h2>
+<ul>
+<li><p>a new button in the composer</p>
+<ul>
+<li>picture: use DALL-E</li>
+<li>search: find on the web</li>
+<li>reason: use O1</li>
+<li>canvas: collaborate on writing and code</li>
+</ul></li>
+<li><p>canvas: help me write a Christmas story about silly eves for my
+kids</p></li>
+<li><p>commonly used shortcuts</p>
+<ul>
+<li>edit</li>
+<li>length</li>
+<li>reading level</li>
+<li>add final polish</li>
+<li>add emojis</li>
+</ul></li>
+<li><p>paste contents and open in canvas</p></li>
+<li><p>can you leave some comments on my essay from the perspective of
+my physics professor</p></li>
+<li><p>can you help me debug this code? what might be going
+wrong.</p></li>
+<li><p>a new button in the upper right :run</p></li>
+<li><p>fix bug</p></li>
+<li><p>can you add a sankey flow diagram for santa’s toys. please use
+appropriate colors!</p></li>
+<li><p>GPTs with canvas</p>
+<ul>
+<li>GPT configure, instructioons</li>
+<li>You are a tool for Santa to help write first draft responses in
+canvas to the letters he gets. Every response shoould be written in
+Santa’s characteristic style and humor. Your job is to write responses
+to letters(which will be provided) using the Canvas tool.</li>
+</ul></li>
 </ul>
 </div>
 </div>
