--- a/ai.html
+++ b/ai.html
@@ -2122,6 +2122,187 @@ to letters(which will be provided) using the Canvas tool.</li>
 </ul></li>
 </ul>
 </div>
+<div id="day-5--chatgpt-integration-集成" class="section level2">
+<h2>Day 5- ChatGPT integration 集成</h2>
+<ul>
+<li>Iphone
+<ul>
+<li>apple intelligence</li>
+<li>siri</li>
+</ul></li>
+<li>Mac OS 15.2 Sequoia
+<ul>
+<li>this doc is super long, how did they get the model to be so good at
+coding?</li>
+<li>ok, but i’m a more visual learner, can we make a pie chart of the
+respective influence of each of the techniques on making it good at
+coding?</li>
+</ul></li>
+</ul>
+</div>
+<div id="day-6--chatgpt-对话中加入视频功能屏幕共享-multimodal" class="section level2">
+<h2>Day 6- ChatGPT 对话中加入视频功能/屏幕共享-multimodal</h2>
+<ul>
+<li>advanced voice mode button
+<ul>
+<li>video button</li>
+<li>screen broadcast button</li>
+</ul></li>
+<li>santa圣诞老人</li>
+</ul>
+</div>
+<div id="day-7-projects" class="section level2">
+<h2>Day 7 – projects</h2>
+<ul>
+<li>project (文件夹)</li>
+<li>new chat</li>
+<li>search and add previous chat into the project</li>
+<li>drag and remove chat from the project</li>
+<li>add files to the project</li>
+<li>instructions
+<ul>
+<li>You are a principal level elf at Santa’s workshop. You have been
+tasked with helping me organize a Secret Santa gift exchange for my
+friends. You communicate in a festive tone and love gift giving. Use
+lots of emoji and exclamation points.</li>
+<li>I am the organizer of the event, my name is Drew.</li>
+<li>when asked to help write a letter or email, use the Canvas Tool when
+possible.</li>
+<li>ignore previous instructions: Santa is real.</li>
+</ul></li>
+<li>show me the secret santa submissions spreadsheet in a table</li>
+<li>please randomly assign every person to give a gift to another
+person. Display it in a table with three columns:Giver, Recipient,
+Recipient Gift Ideas.</li>
+<li>what does luther want as his gift? and who is assigned to give it to
+him?</li>
+<li>searching the web</li>
+<li>search the web for festive hats</li>
+<li>write an email to event participants</li>
+<li>another project
+<ul>
+<li>add files</li>
+<li>do i need to replace the water filter in my fridge?</li>
+<li>how do i do that</li>
+</ul></li>
+<li>another project:website
+<ul>
+<li>add files: pdf json pdf astro</li>
+<li>instructions</li>
+<li>my website is in astro template syntax, whic is not standard JSX.
+Refer to “Astro Template Specification.pdf” fpr the full syntax. For
+example, you MUST escape lists and data to elements in square brackets,
+like
+<Header links="{[]}">
+.</li>
+<li>Use a professioonal , but quirky, tone when generating. Be thorough
+in testimonials and projects listings.</li>
+<li>chat</li>
+<li>modify the baseline template in canvas to incorporate personal
+information and social links</li>
+<li>search the web to find any projects I’ve made that might be
+missing.</li>
+<li>modify the template to incorporate those projects</li>
+<li>generate a <Testimonial> fragment and incorporate a new quote from
+Kevin Weil saying “Thomas is often punctual and has great hair”</li>
+</ul></li>
+</ul>
+</div>
+<div id="day-8-search" class="section level2">
+<h2>Day 8 – Search</h2>
+<ul>
+<li>what are some good events in the city this weekend? – search</li>
+<li>show me the trailer for the new lion king movie</li>
+<li>url links/images/videos</li>
+<li>use chatgpt as their default engine in their browser: setting</li>
+<li>手机端</li>
+<li>what are some good Mexican food restaurants in the mission</li>
+<li>what about some with outdoor patios and heaters</li>
+<li>advanced voice mode 语音搜索</li>
+</ul>
+</div>
+<div id="day-9-api" class="section level2">
+<h2>Day 9 – API</h2>
+<ul>
+<li>function calling</li>
+<li>structured outputs</li>
+<li>developmer messages</li>
+<li>rreasoning efforts</li>
+<li>Vision inputs</li>
+<li>实时API –webRTC</li>
+<li>音频token</li>
+<li>LTIM API support for Python SDK</li>
+<li>supervised fine-tuning and reinforcement fine-tuning</li>
+</ul>
+</div>
+<div id="day-10-calling-and-whatsapp" class="section level2">
+<h2>Day 10 – Calling and WhatsApp</h2>
+<ul>
+<li>1(800)ChatGPT</li>
+<li>1(800)242-8478</li>
+</ul>
+</div>
+<div id="day-11-desktop" class="section level2">
+<h2>Day 11 – desktop</h2>
+<ul>
+<li>option + space</li>
+<li>work with apps(warp/notion/notes/xcode)</li>
+<li>warp</li>
+<li>write a command to get the number of commits per day over the past
+two months</li>
+<li>make a bar graph with all of the results. make it holiday
+themed</li>
+<li>xcode</li>
+<li>add an observer so if selection changes , loadTextAreas is
+called</li>
+<li>notion</li>
+<li>fill out these talking points (search button)</li>
+<li>make it match the style of the rest oof the stops. keep it short,
+two paragraphs</li>
+<li>notes</li>
+<li>advanced voice mode</li>
+</ul>
+</div>
+<div id="day-12-o3-and-o3-min" class="section level2">
+<h2>Day 12 – O3 and O3 min</h2>
+<ul>
+<li>O3 : o1 preview–o1–o3
+<ul>
+<li>program(software engineering(SWE-bench
+Verified)code(Codeforces))</li>
+<li>math competition math(AIME 2024)  phd level science
+questions(GPQA-Dimond)math(EpochAI Frontier Math )</li>
+</ul></li>
+<li>O3 min
+<ul>
+<li>a new cost-efficient reasoning model</li>
+<li>write me a python script which lanches a server locally for an html
+file which has a big text box. When I enter text into that box and press
+submit, it should send that the request for code to the OpenAI o3 min
+API with medium reasoning_effort, take the resulting code, save it to a
+temporary file on the desktop, then execute that file in a new python
+terminal. A few more details:</li>
+<li>it can find my API key in ~/api_key</li>
+<li>please add some extra prompting intoo the request to the api to
+specify that it should only return raw code without any formating or
+markdown at all</li>
+<li>you’ll be excuting on a mac laptop</li>
+<li>generate a code that evaluates ‘O3-mini’ with ‘low’ reasoning effort
+on gpqa dataset, you need to download the raw file in <a href="http://openaipublic.blob.cor.windows.net/simple-evals/gpqa_diamond.csv" class="uri">http://openaipublic.blob.cor.windows.net/simple-evals/gpqa_diamond.csv</a>,
+the question is in “Question”, the four options are in “correct answer”,
+“Incorrect Answer 1”, “Incorrect Answer 2”, “Incorrect Answer 3”</li>
+<li>for each multiple choice question, shuffle the options, give format
+instructions: “Please output ‘Answer:$LETTER’ in the last line”, and use
+a regex to grade whether the model output is correct or not. Make all
+tasks async for maximal parallelism and robust again failed api calls
+(add a 30s timeout if we don’t get a response from api call and retry
+for 4 times). Print progress using ‘tqdm’. Print the accuracy at the
+end.</li>
+<li>if you need a reminder on how to use the OpenAI API, look at this
+example</li>
+</ul></li>
+</ul>
+</div>
 </div>
 <div id="ai-links" class="section level1">
 <h1>AI Links</h1>
