--- a/url.html
+++ b/url.html
@@ -1478,7 +1478,11 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="ai" class="section level1">
 <h1>AI</h1>
 <p><a href="https://chatgpt.openai.com">ChatGPT</a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
-<p><a href="ai.html">AI应用</a></p>
+<p><a href="https://perplexity.ai">Perplexity</a> <a href="https://mplx.run">MiniPerplexity</a></p>
+<p><a href="https://aistudio.google.com/">AIstudio</a> <a href="ai.html">AI应用</a></p>
+<p><a href="https://www.doubao.com">doubao</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com">NotebookLM</a></p>
+<p><a href="https://www.suno.ai">suno</a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://zhiwen.xfyun.cn/">xunfei</a> <a href="https://zenvideo.qq.com">Tencent</a></p>
+<p><a href="https://www.coze.com">Coze</a></p>
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
@@ -1486,7 +1490,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="tools" class="section level1">
 <h1>Tools</h1>
-<p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://draw.io">Flowchart</a> <a href="https://infografix.app/app">可视化</a> <a href="https://www.napkin.ai">AI可视化</a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://www.photopea.com/">pic</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
+<p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a> <a href="https://excalidraw.com">Excalidraw</a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Mardownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai">AI可视化napkin</a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
 </div>
 <div id="teach" class="section level1">
 <h1>Teach</h1>
@@ -1511,8 +1515,8 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="mac" class="section level1">
 <h1>Mac</h1>
-<p>[Arc] [screen studio] [downie 4] [ina] [pdfgear] [tuxera disk]
-[visual studio code]</p>
+<p>[Arc] [Doubao] [screen studio] [downie 4] [ina] [pdfgear] [tuxera
+disk] [visual studio code]</p>
 </div>
 
 
